# ogcapi

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Config.json  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml  ogcapi.qgz  openapi.yaml  sqlx-data.json
.github/workflows/: ci.yml  cite.yml  ogc-validator.yml  ogc_validator.py
api/: STAC.yaml  ogcapi-features-1.json  ogcapi-features-1.yaml  ogcapi-features_sprint.yaml  ogcapi.yaml
data/: liechtenstein-latest.osm.pbf  ne_10m_railroads_north_america.geojson  ne_110m_admin_0_countries.geojson  ne_110m_populated_places.geojson  ogcapi.qgz
examples/cite-service/: Cargo.toml
examples/cite-service/src/: main.rs
examples/data-loader/: Cargo.toml
examples/data-loader/src/: args.rs  asset.rs  boundaries.rs  geojson.rs  lib.rs  main.rs  ogr.rs  osm.rs
examples/data-loader/src/import/: boundaries.rs  geojson.rs  mod.rs  ogr.rs  osm.rs
examples/demo-service/: Cargo.toml
examples/demo-service/src/: main.rs
migrations/: 20201113131516_initialization.sql
ogcapi/: Cargo.toml  README.md
ogcapi-cli/: Cargo.toml  README.md
ogcapi-cli/src/: lib.rs  main.rs
ogcapi-cli/src/import/: ogr.rs  osm.rs
ogcapi-client/: Cargo.toml  README.md
ogcapi-client/src/: async_client.rs  blocking.rs  client.rs  error.rs  lib.rs  processes.rs
ogcapi-client/src/client/: collections.rs  features.rs  mod.rs  processes.rs
ogcapi-drivers/: Cargo.toml  README.md
ogcapi-drivers/migrations/: 20201113131516_initialization.sql  20251020900000_response_type.sql
ogcapi-drivers/src/: lib.rs  postgres.rs
ogcapi-drivers/src/blanket/: mod.rs
ogcapi-drivers/src/object/: collection.rs  feature.rs  job.rs  mod.rs
ogcapi-drivers/src/postgres/: collection.rs  edr.rs  feature.rs  job.rs  mod.rs  stac.rs  style.rs  tile.rs
ogcapi-drivers/src/s3/: collection.rs  feature.rs  mod.rs
ogcapi-drivers/tests/: crud.rs  job.rs  queries.pgsql
ogcapi-entities/: Cargo.toml  README.md
ogcapi-entities/src/: lib.rs
ogcapi-entities/src/common/: mod.rs
ogcapi-entities/src/common/collections/: collection.rs  mod.rs  query.rs
ogcapi-entities/src/common/core/: datetime.rs  exception.rs  landingpage.rs  link.rs  mod.rs
ogcapi-entities/src/edr/: mod.rs  query.rs
ogcapi-entities/src/features/: mod.rs  query.rs
ogcapi-entities/src/processes/: execute.rs  mod.rs  query.rs
ogcapi-entities/src/styles/: mod.rs  symcore.rs
ogcapi-entities/src/tiles/: mod.rs  tileset.rs  tms.rs
ogcapi-processes/: Cargo.toml  README.md  echo.http
ogcapi-processes/src/: echo.rs  gdal_loader.rs  geojson_loader.rs  greeter.rs  lib.rs  processor.rs
ogcapi-services/: Cargo.toml  README.md  openapi-edr.yaml  openapi.yaml
ogcapi-services/assets/openapi/: openapi-processes.yaml  openapi.yaml
ogcapi-services/assets/tms/: WebMercartorQuad.json
ogcapi-services/src/: auth.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  openapi.rs  processes.rs  processor.rs  service.rs  state.rs  telemetry.rs  util.rs
ogcapi-services/src/processes/: greeter.rs  mod.rs
ogcapi-services/src/routes/: api.rs  collections.rs  common.rs  edr.rs  features.rs  mod.rs  processes.rs  stac.rs  styles.rs  tiles.rs
ogcapi-services/tests/: crud.rs  edr.rs  setup.rs
ogcapi-types/: Cargo.toml  README.md
ogcapi-types/assets/tms/: WebMercartorQuad.json
ogcapi-types/src/: coverage.rs  lib.rs
ogcapi-types/src/common/: bbox.rs  collection.rs  collections.rs  conformance.rs  crs.rs  datetime.rs  exception.rs  extent.rs  landing_page.rs  link.rs  link_rel.rs  linked.rs  links.rs  list_param.rs  media_type.rs  mod.rs  query.rs
ogcapi-types/src/common/collections/: collection.rs  mod.rs
ogcapi-types/src/common/core/: bbox.rs  exception.rs  landingpage.rs  link.rs  mediatype.rs  mod.rs
ogcapi-types/src/edr/: data_queries.rs  mod.rs  observed_property.rs  parameter_names.rs  query.rs  units.rs
ogcapi-types/src/features/: feature.rs  feature_collection.rs  mod.rs  query.rs  queryables.rs
ogcapi-types/src/movingfeatures/: crs.rs  json_utils.rs  mfjson_temporal_properties.rs  mod.rs  temporal_complex_geometry.rs  temporal_geometry.rs  temporal_primitive_geometry.rs  temporal_primitive_value.rs  temporal_properties.rs  temporal_properties_list.rs  temporal_property.rs  trs.rs
ogcapi-types/src/processes/: description.rs  description_type.rs  execute.rs  input_description.rs  job.rs  mod.rs  output_description.rs  process.rs  process_summary.rs  query.rs
ogcapi-types/src/stac/: asset.rs  catalog.rs  entity.rs  mod.rs  provider.rs  search.rs
ogcapi-types/src/styles/: mapbox.rs  mod.rs  symcore.rs
ogcapi-types/src/tiles/: mod.rs  tileset.rs  tms.rs
ogcapi/src/: lib.rs  main.rs
ogcapi/src/import/: args.rs  geojson.rs  mod.rs  ogr.rs  osm.rs
openapi/: ogcapi.yaml
openapi/schemas/: exception.yaml  landingPage.yaml
sql/: collection_delete.sql  collection_insert.sql  collection_select.sql  collection_update.sql  feature_delete.sql  feature_import.sql  feature_insert.sql  feature_select.sql  feature_update.sql  tile_select.sql
src/: cli.rs  collection.rs  collections.rs  common.rs  db.rs  edr.rs  features.rs  lib.rs  main.rs  schema.rs  tests.rs
src/collections/: mod.rs  routes.rs
src/common/: bbox.rs  collection.rs  collections.rs  crs.rs  datetime.rs  exception.rs  link.rs  mod.rs
src/common/collections/: collection.rs  mod.rs
src/common/core/: bbox.rs  exception.rs  link.rs  mediatype.rs  mod.rs
src/feature/: mod.rs  query.rs
src/features/: handles.rs  mod.rs  query.rs  queryables.rs  routes.rs  schema.rs  service.rs
src/features/routes/: collections.rs  items.rs  mod.rs
src/import/: boundaries.rs  gdal.rs  mod.rs  ogr.rs  osm.rs
src/processes/: execute.rs  job.rs  mod.rs  process.rs
src/routes/: collections.rs  items.rs  mod.rs
src/server/: error.rs  exception.rs  extractors.rs  mod.rs
src/server/routes/: collections.rs  edr.rs  features.rs  (+4 more)
src/service/: mod.rs  routes.rs
src/styles/: mod.rs
src/tests/: mod.rs
src/tiles/: mod.rs  routes.rs  tileset.rs  tms.rs
tests/: crud.rs  edr.rs
