[workspace]
resolver = "2"

members = [
    "ogcapi",
    "ogcapi-client",
    "ogcapi-drivers",
    "ogcapi-processes",
    "ogcapi-services",
    "ogcapi-types",
    "examples/*",
]
exclude = ["examples/*"]
default-members = ["ogcapi"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/ogcapi"
edition = "2024"
categories = ["science::geospatial"]
keywords = ["geography", "geo", "geospatial", "gis", "api"]

[workspace.dependencies]
anyhow = "1.0"
geojson = "0.24.2"
log = "0.4.26"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.13.0"
thiserror = "2.0"
url = "2.5"
