[package]
name = "ogcapi_cli"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.5.0", optional = true, features = ["headers"] }
clap = { version = "3.1.8", features = ["derive", "env"] }
dotenv = { version = "0.15.0" }
gdal = { version = "0.12.0", optional = true, features = ["bindgen"] }
geo = { version = "0.19.0", optional = true }
osmpbfreader = { version = "0.15.2", optional = true }
pbr = { version = "1.0.4", optional = true }
serde = "1.0.136"
serde_json = "1.0.79"
sqlx = { version = "0.5.11", optional = true, features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.32"}
tracing-subscriber = { version="0.3.10", features = ["env-filter"] }
url = { version = "2.2.2", features = ["serde"] }
wkb = { version = "0.7.1", optional = true }

ogcapi_entities = { path = "../ogcapi-entities" }
ogcapi_drivers = { path = "../ogcapi-drivers" }
ogcapi_services = { path = "../ogcapi-services", optional = true }



[features]
default = ["import", "serve"]
import = ["gdal", "geo", "osmpbfreader", "pbr", "sqlx", "wkb"]
serve = ["axum", "ogcapi_services"]