[package]
name = "ogcapi-client"
version = "0.2.0"
description = "Client to access OGC API Feature and STAC endpoints."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["features"]
features = ["ogcapi-types/features"]
stac = ["ogcapi-types/stac"]

[dependencies]
geojson = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

ogcapi-types = { path = "../ogcapi-types", version = "0.2" }
