[package]
name = "ogcapi-client"
version = "0.3.0"
description = "Client to access OGC API Feature and STAC endpoints."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["features", "processes"]

features = ["ogcapi-types/features"]
processes = ["ogcapi-processes"]

stac = ["features", "ogcapi-types/stac"]

blocking = ["reqwest/blocking"]

[dependencies]
futures-core = "0.3"
geojson = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

ogcapi-types = { path = "../ogcapi-types", version = "0.3", default-features = false, features = ["common"] }
ogcapi-processes = { path = "../ogcapi-processes", version = "0.3", optional = true, default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "0.13.2"
features = ["default-tls"]

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

ogcapi-processes = { path = "../ogcapi-processes", version = "0.3", features = ["greeter"]}

[package.metadata.docs.rs]
all-features = true
