[package]
name = "ogcapi-drivers"
version = "0.2.0"
description = "Driver traits and implementations"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/migrations"]

[features]
default = []

postgres = ["sqlx", "rink-core", "url"]
s3 = ["aws-config", "aws-sdk-s3"]

# standards
common = ["ogcapi-types/common"]
edr = ["common", "ogcapi-types/edr"]
features = ["common", "ogcapi-types/features"]
processes = ["common", "ogcapi-types/processes"]
stac = ["features", "ogcapi-types/stac", "s3"]
styles = ["ogcapi-types/styles"]
tiles = ["common", "ogcapi-types/tiles"]

[dependencies]
anyhow = { workspace = true }
aws-config = { version = "1.4.0", optional = true, features = [
    "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1.29.0", optional = true, features = [
    "behavior-version-latest",
] }
async-trait = "0.1.80"
http = "1.1"
rink-core = { version = "0.8.0", optional = true, features = ["bundle-files"] }
serde_json = { workspace = true }
sqlx = { version = "0.7.4", optional = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "migrate",
] }
# tokio = { version = "1.37", features = ["full"] }
url = { workspace = true, optional = true }

ogcapi-types = { path = "../ogcapi-types", version = "0.2" }
