[package]
name = "ogcapi-drivers"
version = "0.3.0"
description = "Driver traits and implementations"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/migrations"]

[features]
default = []

postgres = ["sqlx", "rink-core", "url"]
s3 = ["aws-config", "aws-sdk-s3"]

# standards
common = ["ogcapi-types/common"]
edr = ["common", "ogcapi-types/edr"]
features = ["common", "ogcapi-types/features"]
processes = ["common", "ogcapi-types/processes"]
stac = ["features", "ogcapi-types/stac", "s3"]
styles = ["ogcapi-types/styles"]
tiles = ["common", "ogcapi-types/tiles"]

[dependencies]
anyhow = { workspace = true }
aws-config = { version = "1.6", optional = true, features = [
    "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1.81", optional = true, features = [
    "behavior-version-latest",
] }
async-trait = "0.1.88"
http = "1.3"
rink-core = { version = "0.8.0", optional = true, features = ["bundle-files"] }
serde_json = { workspace = true }
sqlx = { version = "0.8.3", optional = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "migrate",
] }
url = { workspace = true, optional = true }

ogcapi-types = { path = "../ogcapi-types", version = "0.3" }
