[package]
name = "ogcapi-drivers"
version = "0.3.0"
description = "Driver traits and implementations"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/migrations"]

[features]
default = ["object", "common", "edr", "features", "processes", "tiles"]

# drivers
object = ["dep:bytes", "dep:futures", "dep:object_store"]
postgres = ["sqlx", "rink-core"]


# standards
common = ["ogcapi-types/common"]
edr = ["common", "ogcapi-types/edr"]
features = ["common", "ogcapi-types/features"]
processes = ["common", "ogcapi-types/processes"]
stac = ["features", "ogcapi-types/stac", "object"]
styles = ["ogcapi-types/styles"]
tiles = ["common", "ogcapi-types/tiles"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { version = "1.11", optional = true }
futures = { version = "0.3.32", optional = true }
object_store = { version = "0.13.2", optional = true, features = [] }
rink-core = { version = "0.8.0", optional = true, features = ["bundle-files"] }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", optional = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "migrate",
] }
url = { workspace = true }
uuid = { version = "1.23", features = ["v4"]}

ogcapi-types = { path = "../ogcapi-types", version = "0.3", default-features = false }

[dev-dependencies]
tokio = { version = "1.51", default-features = false, features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
