[package]
name = "ogcapi_entities"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
geojson = "0.22.3"
serde = "1.0.136"
serde_json = "1.0.79"
serde_repr = "0.1.7"
serde_with = { version = "1.12.0", features = ["json"] }
sqlx = { version = "0.5.11", default-features = false, features = ["macros", "runtime-tokio-rustls", "postgres", "json"] }

[dev-dependencies]
serde_qs = "0.9.1"