[package]
name = "ogcapi-processes"
version = "0.2.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["greeter", "geojson-loader", "gdal-loader"]
greeter = []
geojson-loader = ["dep:geojson", "dep:geo", "dep:wkb", "dep:sqlx", "dep:ogcapi-drivers"]
gdal-loader = ["dep:arrow", "arrow/ffi", "arrow/json", "dep:gdal", "dep:geo", "dep:wkb", "dep:sqlx", "dep:ogcapi-drivers"]

[dependencies]
anyhow = "1.0"
arrow ={ version = "54.3", optional = true, default-features = false }
async-trait = "0.1.88"
dyn-clone = "1.0"
gdal = { version = "0.18.0", optional = true, features = ["bindgen"] }
geo = { version = "0.30.0", optional = true, default-features = false }
geojson = { workspace = true, optional = true, features = ["geo-types"]}
http-body = "1.0"
schemars = "0.8.22"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.44", default-features = false, features = ["rt-multi-thread", "macros"] }
url = { workspace = true }

sqlx = { version = "0.8.3", optional = true }
wkb = { version = "0.8.0", optional = true }

ogcapi-types = { path = "../ogcapi-types", version = "0.2", features = ["processes"] }
ogcapi-drivers = { path = "../ogcapi-drivers", version = "0.2", optional = true, features = ["postgres", "common"] }
