[package]
name = "ogcapi-processes"
version = "0.3.0"
description = "Processor trait and implementations"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["greeter", "geojson-loader", "gdal-loader"]

# processes
greeter = []
geojson-loader = ["dep:geojson", "dep:sqlx", "dep:ogcapi-drivers"]
gdal-loader = ["dep:arrow", "arrow/ffi", "arrow/json", "dep:gdal", "dep:wkb", "dep:sqlx", "dep:ogcapi-drivers"]

[dependencies]
anyhow = "1.0"
arrow = { version = "58.1", optional = true, default-features = false }
async-trait = "0.1.89"
dyn-clone = "1.0"
gdal = { version = "0.19.0", optional = true, features = ["bindgen"] }
geojson = { workspace = true, optional = true }
schemars = "1.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.51", default-features = false, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }

sqlx = { version = "0.8.6", optional = true }
wkb = { version = "0.9.2", optional = true }

ogcapi-types = { path = "../ogcapi-types", version = "0.3", default-features = false, features = ["processes"] }
ogcapi-drivers = { path = "../ogcapi-drivers", version = "0.3", optional = true, default-features = false, features = ["postgres", "common"] }

[package.metadata.docs.rs]
all-features = true
