[package]
name = "ogcapi-services"
version = "0.3.0"
description = "Server implementation of several OGC API Standards."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/assets"]

[features]
default = ["common", "edr", "features", "processes", "tiles"]

# standads
common = ["ogcapi-types/common", "ogcapi-drivers/common"]
features = ["ogcapi-types/features", "ogcapi-drivers/features"]
edr = ["ogcapi-types/edr", "ogcapi-drivers/edr"]
processes = ["ogcapi-types/processes", "ogcapi-drivers/processes", "ogcapi-processes", "dyn-clone", "schemars", "mail-builder"]
stac = ["ogcapi-types/stac", "ogcapi-drivers/stac"]
styles = ["ogcapi-types/styles", "ogcapi-drivers/styles"]
tiles = ["ogcapi-types/tiles", "ogcapi-drivers/tiles", "dashmap", "reqwest"]

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.7", features = ["multipart"] }
axum-extra = { version = "0.12.2" }
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = { version = "6.1", optional = true }
dyn-clone = { version = "1.0", optional = true }
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.8", features = ["full"] }
mail-builder = { version = "0.4.4", optional = true }
openapiv3 = "2.2"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json"] }
schemars = { version = "1.1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_yaml = "0.9.33"
thiserror = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-gzip", "catch-panic", "cors", "request-id", "sensitive-headers", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
utoipa = { version = "5.4", features = ["axum_extras", "preserve_order", "preserve_path_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

ogcapi-types = { path = "../ogcapi-types", version = "0.3", default-features = false }
ogcapi-drivers = { path = "../ogcapi-drivers", version = "0.3", default-features = false, features = ["postgres"] }
ogcapi-processes = { path = "../ogcapi-processes", version = "0.3", optional = true, default-features = false }

[dev-dependencies]
geojson = { workspace = true }
hyper-util = { version = "0.1.18", features = ["client-legacy"] }
http-body-util = "0.1.3"
uuid = { version = "1.18", features = ["serde", "v4"] }

data-loader = { path = "../examples/data-loader" }

[package.metadata.docs.rs]
all-features = true
