[package]
name = "ogcapi-services"
version = "0.3.0"
description = "Server implementation of several OGC API Standards."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/assets"]

[features]
default = ["common", "edr", "features", "processes", "tiles"]

# standads
common = ["ogcapi-types/common", "ogcapi-drivers/common"]
features = ["ogcapi-types/features", "ogcapi-drivers/features"]
edr = ["ogcapi-types/edr", "ogcapi-drivers/edr"]
processes = ["ogcapi-types/processes", "ogcapi-drivers/processes", "dyn-clone", "schemars", "ogcapi-processes"]
stac = ["ogcapi-types/stac", "ogcapi-drivers/stac"]
styles = ["ogcapi-types/styles", "ogcapi-drivers/styles"]
tiles = ["ogcapi-types/tiles", "ogcapi-drivers/tiles"]

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1" }
clap = { version = "4.5", features = ["derive", "env"] }
dyn-clone = { version = "1.0", optional = true }
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = { version = "1.6", features = ["full"] }
mail-builder = "0.4.4"
openapiv3 = "2.2"
schemars = { version = "1.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
serde_yaml = "0.9.33"
thiserror = { workspace = true }
tokio = { version = "1.47", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["auth", "compression-gzip", "catch-panic", "cors", "request-id", "sensitive-headers", "trace", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
utoipa = { version = "5.3", features = ["axum_extras", "preserve_order", "preserve_path_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

ogcapi-types = { path = "../ogcapi-types", version = "0.3", default-features = false }
ogcapi-drivers = { path = "../ogcapi-drivers", version = "0.3", default-features = false, features = ["postgres"] }
ogcapi-processes = { path = "../ogcapi-processes", version = "0.3", optional = true, default-features = false }

[dev-dependencies]
geojson = { workspace = true }
hyper-util = { version = "0.1.16", features = ["client-legacy"] }
http-body-util = "0.1.3"
uuid = { version = "1.17", features = ["serde", "v4"] }

data-loader = { path = "../examples/data-loader" }

[package.metadata.docs.rs]
all-features = true
