[package]
name = "ogcapi-types"
version = "0.2.0"
description = "Types as defined by various OGC API Standards."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["common"]

# standards
common = []
edr = ["common"]
features = ["common"]
processes = ["common"]
stac = ["features"]
styles = []
tiles = ["common"]
coverages = []

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
geojson = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.19"
serde_with = { version = "3.12", features = ["json"] }
url = { workspace = true }
