[package]
name = "ogcapi-types"
version = "0.3.0"
description = "Types as defined by various OGC API Standards."
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

include = ["/src", "/assets"]

[features]
default = ["common", "edr", "features", "processes", "tiles"]

# standards
common = []
edr = ["common", "features"]
features = ["common"]
processes = ["common"]
stac = ["features"]
styles = []
tiles = ["common"]
coverages = []

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
geojson = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.20"
serde_with = { version = "3.14", features = ["json"] }
serde_qs = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["preserve_order", "chrono", "url", "repr"] }

[package.metadata.docs.rs]
all-features = true
