[package]
name = "ogcapi"
version = "0.2.0"
description = "OGC API building blocks."
readme = "../README.md"
license.workspace = true
repository.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []

# components
types = ["ogcapi-types"]
client = ["ogcapi-client"]
drivers = ["ogcapi-drivers"]
services = ["ogcapi-services"]

# standards
common = [
    "ogcapi-types?/common",
    "ogcapi-drivers?/common",
    "ogcapi-services?/common",
]
edr = ["ogcapi-types?/edr", "ogcapi-drivers?/edr", "ogcapi-services?/edr"]
features = [
    "ogcapi-types?/features",
    "ogcapi-drivers?/features",
    "ogcapi-services?/features",
]
processes = [
    "ogcapi-types?/processes",
    "ogcapi-drivers?/processes",
    "ogcapi-services?/processes",
    "ogcapi-processes",
]
stac = [
    "ogcapi-types?/stac",
    "ogcapi-drivers?/stac",
    "ogcapi-services?/stac",
    "ogcapi-client?/stac",
]
styles = [
    "ogcapi-types?/styles",
    "ogcapi-drivers?/styles",
    "ogcapi-services?/styles",
]
tiles = [
    "ogcapi-types?/tiles",
    "ogcapi-drivers?/tiles",
    "ogcapi-services?/tiles",
]

# drivers
postgres = ["ogcapi-drivers/postgres"]

# processes
greeter = ["processes"]

[dependencies]
ogcapi-types = { path = "../ogcapi-types", version = "0.2", optional = true }
ogcapi-drivers = { path = "../ogcapi-drivers", version = "0.2", optional = true }
ogcapi-processes = { path = "../ogcapi-processes", version = "0.2", optional = true }
ogcapi-services = { path = "../ogcapi-services", version = "0.2", optional = true }
ogcapi-client = { path = "../ogcapi-client", version = "0.2", optional = true }
