[package]
name = "cite-service"
version = "0.1.0"
edition.workspace = true
publish = false


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

ogcapi = { path = "../../ogcapi", version = "0.3", features = [
    "services",
    "common",
    "features",
] }
