[package]
name = "data-loader"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = ["geojson"]

geojson = ["dep:geo", "dep:geojson", "dep:wkb"]
ogr = ["dep:gdal", "dep:arrow", "arrow/ffi", "arrow/json"]
osm = ["dep:geo", "dep:osmpbfreader", "dep:wkb"]

stac = ["ogcapi/stac"]

[dependencies]
anyhow = { workspace = true }
arrow = { version = "57.0", optional = true, default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
gdal = { version = "0.18.0", optional = true, features = ["bindgen"] }
geo = { version = "0.31.0", optional = true }
geojson = { workspace = true, optional = true, features = ["geo-types"] }
osmpbfreader = { version = "0.19.1", optional = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
wkb = { version = "0.9.2", optional = true }


ogcapi = { path = "../../ogcapi", version = "0.3", features = [
    "common",
    "types",
    "drivers",
    "postgres",
] }
