[package]
name = "demo-service"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
stac = []

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

ogcapi = { path = "../../ogcapi", version = "0.3", features = [
    "services",
    "common",
    "features",
    "processes",
    "tiles",
    "greeter",
    "geojson-loader",
    "gdal-loader",
] }
