[package]
name = "demo-service"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
stac = []

[dependencies]
tokio = { version = "1.48", features = ["full"] }

ogcapi = { path = "../../ogcapi", version = "0.3", features = [
    "services",
    "common",
    "features",
    "processes",
    "tiles",
    "greeter",
    "geojson-loader",
    "gdal-loader",
] }
